objects/ssot__RecurrenceSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompletedScheduleCount__c</fullName>
        <label>Completed Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recurrence Schedule Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextScheduleDateTime__c</fullName>
        <label>Next Schedule Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Reference Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordObject__c</fullName>
        <label>Reference Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduleDayValueNumber__c</fullName>
        <label>Schedule Day Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduleFrequency__c</fullName>
        <label>Schedule Frequency</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRecurrencesCount__c</fullName>
        <label>Total Recurrences Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818168263_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecurrenceSchedule_ReferenceRecordId_rel</label>
        <referenceTo>ssot__ActionPlan__dlm</referenceTo>
        <relationshipLabel>RecurrenceSchedule_ReferenceRecordId_rel</relationshipLabel>
        <relationshipName>rel_1719818168263_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819471111_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecurrenceSchedule_ReferenceRecordId_rel</label>
        <referenceTo>ssot__BenefitSchedule__dlm</referenceTo>
        <relationshipLabel>RecurrenceSchedule_ReferenceRecordId_rel</relationshipLabel>
        <relationshipName>rel_1719819471111_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>